--- a/index.html
+++ b/index.html
@@ -29,6 +29,13 @@
 					прибыль. В чем секрет? В чем формула успеха? Узнайте на предстоящем
 					двухдневном <span>БЕСПЛАТНОМ</span> интенсиве!
 				</div>
+
+				<button class="promo_btn">Записаться на интенсив!</button>
+
+				<div class="more">
+					<div class="more_text">узнать больше об интенсиве</div>
+					<img src="/icons/arrow_down.png" alt="down" class="more_img" />
+				</div>
 			</div>
 		</section>
 	</body>
