add: work with waiting section: add images and some text

--- a/index.html
+++ b/index.html
@@ -38,5 +38,41 @@
 				</div>
 			</div>
 		</section>
+
+		<section class="waiting">
+			<div class="container">
+				<h2 class="waiting_header">Что вас ждет в нашем интенсиве?</h2>
+				<hr class="hr_waiting" />
+				<div class="waiting_subheader">
+					2 бесплатных полноценных обучающих вебинара, где:
+				</div>
+				<div class="waiting_wrapper">
+					<div class="waiting_item">
+						<img
+							src="/img/waiting_block/waiting_1.png"
+							alt="first_image"
+							class="waiting_img"
+						/>
+						<div class="waiting_description"></div>
+					</div>
+					<div class="waiting_item">
+						<img
+							src="/img/waiting_block/waiting_2.png"
+							alt="second_image"
+							class="waiting_img"
+						/>
+						<div class="waiting_description"></div>
+					</div>
+					<div class="waiting_item">
+						<img
+							src="/img/waiting_block/waiting_3.png"
+							alt="third_image"
+							class="waiting_img"
+						/>
+						<div class="waiting_description"></div>
+					</div>
+				</div>
+			</div>
+		</section>
 	</body>
 </html>
