--- a/index.html
+++ b/index.html
@@ -53,15 +53,22 @@
 							alt="first_image"
 							class="waiting_img"
 						/>
-						<div class="waiting_description"></div>
+						<div class="waiting_description">
+							Всего за два бесплатных вебинара мы научим вас, как создать свой
+							сайт на WordPress.
+						</div>
 					</div>
-					<div class="waiting_item">
+					<div class="waiting_item" id="second_img_in_waiting_section">
 						<img
 							src="/img/waiting_block/waiting_2.png"
 							alt="second_image"
 							class="waiting_img"
 						/>
-						<div class="waiting_description"></div>
+						<div class="waiting_description">
+							Покажем, как правильно оптимизировать сайт и сделать его
+							привлекательным для поисковых систем. Только свежая,
+							профессиональная и актуальная информация!
+						</div>
 					</div>
 					<div class="waiting_item">
 						<img
@@ -69,7 +76,11 @@
 							alt="third_image"
 							class="waiting_img"
 						/>
-						<div class="waiting_description"></div>
+						<div class="waiting_description">
+							Вы узнаете, что такое «хорошая индексация»,«высокая посещаемость»,
+							«стабильный прирост посетителей», «ТОП по запросам» и, что намного
+							важнее, как добиться всех этих показателей!
+						</div>
 					</div>
 				</div>
 			</div>
