update: work with finish section

--- a/index.html
+++ b/index.html
@@ -117,5 +117,12 @@
 				</div>
 			</div>
 		</section>
+
+		<section class="finish">
+			<div class="container">
+				<h2 class="finish_header">По окончании обучения Вы сможете!</h2>
+				<hr class="finish_hr" />
+			</div>
+		</section>
 	</body>
 </html>
