update: finish work with this branch; add icons and text

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
 				<div class="waiting_subheader">
 					2 бесплатных полноценных обучающих вебинара, где:
 				</div>
+
 				<div class="waiting_wrapper">
 					<div class="waiting_item">
 						<img
@@ -122,6 +123,67 @@
 			<div class="container">
 				<h2 class="finish_header">По окончании обучения Вы сможете!</h2>
 				<hr class="finish_hr" />
+
+				<div class="finish_wrapper">
+					<div class="finish_item">
+						<div class="finish_round">
+							<img
+								src="/icons/finish_block/finish_icon_1.png"
+								alt="1_picture"
+								class="finish_icon"
+							/>
+						</div>
+						<div class="finish_descr">Создать свой сайт или блог</div>
+					</div>
+
+					<div class="finish_item">
+						<div class="finish_round">
+							<img
+								src="/icons/finish_block/finish_icon_2.png"
+								alt="2_picture"
+								class="finish_icon"
+							/>
+						</div>
+						<div class="finish_descr">Правильно его оптимизировать</div>
+					</div>
+
+					<div class="finish_item">
+						<div class="finish_round">
+							<img
+								src="/icons/finish_block/finish_icon_3.png"
+								alt="3_picture"
+								class="finish_icon"
+							/>
+						</div>
+						<div class="finish_descr">
+							Обеспечить ему медлен- ный, но верный рост в ТОП
+						</div>
+					</div>
+
+					<div class="finish_item">
+						<div class="finish_round">
+							<img
+								src="/icons/finish_block/finish_icon_4.png"
+								alt="4_picture"
+								class="finish_icon"
+							/>
+						</div>
+						<div class="finish_descr">
+							Достигнуть стабильного прироста посетителей
+						</div>
+					</div>
+
+					<div class="finish_item">
+						<div class="finish_round">
+							<img
+								src="/icons/finish_block/finish_icon_5.png"
+								alt="5_picture"
+								class="finish_icon"
+							/>
+						</div>
+						<div class="finish_descr">Получать ощутимую прибыль</div>
+					</div>
+				</div>
 			</div>
 		</section>
 	</body>
