--- a/index.html
+++ b/index.html
@@ -186,5 +186,17 @@
 				</div>
 			</div>
 		</section>
+
+		<section class="gift">
+			<div class="container">
+				<img src="/icons/gift.png" alt="gift.png" class="gift_img" />
+				<div class="gift_desc">
+					Для всех участников интенсива предусмотрены бонусы и подарки.
+					Нажимайте на кнопку ниже, принимайте участие в вебинарах и забирайте
+					свой приз по окончании обучения!
+				</div>
+				<button class="gift_btn">Записаться на интенсив!</button>
+			</div>
+		</section>
 	</body>
 </html>
