update: finish webinar section

--- a/index.html
+++ b/index.html
@@ -198,5 +198,14 @@
 				<button class="gift_btn">Записаться на интенсив!</button>
 			</div>
 		</section>
+
+		<section class="webinar">
+			<div class="container">
+				<img src="/img/webinar_img.png" alt="webinar_img" class="webinar_img" />
+				<h2 class="webinar_desc">Первый вебинар состоится:</h2>
+				<h2 class="webinar_date">10 сентября в 20:00 по Москве</h2>
+				<p>Успейте записаться, количество мест ограничено!</p>
+			</div>
+		</section>
 	</body>
 </html>
