update: complete footer section

--- a/index.html
+++ b/index.html
@@ -207,5 +207,17 @@
 				<p>Успейте записаться, количество мест ограничено!</p>
 			</div>
 		</section>
+
+		<footer>
+			<div class="container">
+				<p>
+					<a href="" class="footer_link">Служба поддержки</a> |
+					<a href="" class="footer_link">Политика конфиденциальности</a>
+					<br />
+					Позвоните нам
+					<a href="" class="phone_link">8-800-555-01-21</a>
+				</p>
+			</div>
+		</footer>
 	</body>
 </html>
