update: change path

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 			<!-- контейнер для разпределния контента по ширине -->
 			<div class="container">
 				<div class="logo">
-					<img src="icons/photo.jpg.png" alt="logo" class="logo_img" />
+					<img src="./icons/photo.jpg.png" alt="logo" class="logo_img" />
 					<div class="logo_text">WordPress интенсив</div>
 				</div>
 				<h1 class="title">Создать свой сайт на WordPress</h1>
@@ -34,7 +34,7 @@
 
 				<div class="more">
 					<div class="more_text">узнать больше об интенсиве</div>
-					<img src="/icons/arrow_down.png" alt="down" class="more_img" />
+					<img src="./icons/arrow_down.png" alt="down" class="more_img" />
 				</div>
 			</div>
 		</section>
@@ -50,7 +50,7 @@
 				<div class="waiting_wrapper">
 					<div class="waiting_item">
 						<img
-							src="/img/waiting_block/waiting_1.png"
+							src="./img/waiting_block/waiting_1.png"
 							alt="first_image"
 							class="waiting_img"
 						/>
@@ -61,7 +61,7 @@
 					</div>
 					<div class="waiting_item" id="second_img_in_waiting_section">
 						<img
-							src="/img/waiting_block/waiting_2.png"
+							src="./img/waiting_block/waiting_2.png"
 							alt="second_image"
 							class="waiting_img"
 						/>
@@ -73,7 +73,7 @@
 					</div>
 					<div class="waiting_item">
 						<img
-							src="/img/waiting_block/waiting_3.png"
+							src="./img/waiting_block/waiting_3.png"
 							alt="third_image"
 							class="waiting_img"
 						/>
@@ -111,7 +111,7 @@
 						конкурентов.
 					</span>
 					<img
-						src="/img/background/woman_bg.png"
+						src="./img/background/woman_bg.png"
 						alt="optimazation_img"
 						class="optimization_img"
 					/>
@@ -128,7 +128,7 @@
 					<div class="finish_item">
 						<div class="finish_round">
 							<img
-								src="/icons/finish_block/finish_icon_1.png"
+								src="./icons/finish_block/finish_icon_1.png"
 								alt="1_picture"
 								class="finish_icon"
 							/>
@@ -139,7 +139,7 @@
 					<div class="finish_item">
 						<div class="finish_round">
 							<img
-								src="/icons/finish_block/finish_icon_2.png"
+								src="./icons/finish_block/finish_icon_2.png"
 								alt="2_picture"
 								class="finish_icon"
 							/>
@@ -150,7 +150,7 @@
 					<div class="finish_item">
 						<div class="finish_round">
 							<img
-								src="/icons/finish_block/finish_icon_3.png"
+								src="./icons/finish_block/finish_icon_3.png"
 								alt="3_picture"
 								class="finish_icon"
 							/>
@@ -163,7 +163,7 @@
 					<div class="finish_item">
 						<div class="finish_round">
 							<img
-								src="/icons/finish_block/finish_icon_4.png"
+								src="./icons/finish_block/finish_icon_4.png"
 								alt="4_picture"
 								class="finish_icon"
 							/>
@@ -176,7 +176,7 @@
 					<div class="finish_item">
 						<div class="finish_round">
 							<img
-								src="/icons/finish_block/finish_icon_5.png"
+								src="./icons/finish_block/finish_icon_5.png"
 								alt="5_picture"
 								class="finish_icon"
 							/>
@@ -189,7 +189,7 @@
 
 		<section class="gift">
 			<div class="container">
-				<img src="/icons/gift.png" alt="gift.png" class="gift_img" />
+				<img src="./icons/gift.png" alt="gift.png" class="gift_img" />
 				<div class="gift_desc">
 					Для всех участников интенсива предусмотрены бонусы и подарки.
 					Нажимайте на кнопку ниже, принимайте участие в вебинарах и забирайте
@@ -201,7 +201,11 @@
 
 		<section class="webinar">
 			<div class="container">
-				<img src="/img/webinar_img.png" alt="webinar_img" class="webinar_img" />
+				<img
+					src="./img/webinar_img.png"
+					alt="webinar_img"
+					class="webinar_img"
+				/>
 				<h2 class="webinar_desc">Первый вебинар состоится:</h2>
 				<h2 class="webinar_date">10 сентября в 20:00 по Москве</h2>
 				<p>Успейте записаться, количество мест ограничено!</p>
