update: add references

--- a/index.html
+++ b/index.html
@@ -30,7 +30,10 @@
 					двухдневном <span>БЕСПЛАТНОМ</span> интенсиве!
 				</div>
 
-				<button class="promo_btn">Записаться на интенсив!</button>
+				<a
+					href="https://media.discordapp.net/attachments/319545870205059073/417766418533318657/BILLY.gif"
+					><button class="promo_btn">Записаться на интенсив!</button></a
+				>
 
 				<div class="more">
 					<div class="more_text">узнать больше об интенсиве</div>
@@ -195,7 +198,10 @@
 					Нажимайте на кнопку ниже, принимайте участие в вебинарах и забирайте
 					свой приз по окончании обучения!
 				</div>
-				<button class="gift_btn">Записаться на интенсив!</button>
+				<a
+					href="https://media.discordapp.net/attachments/319545870205059073/417766418533318657/BILLY.gif"
+					><button class="gift_btn">Записаться на интенсив!</button></a
+				>
 			</div>
 		</section>
 
