update: add some styles for buttons

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="./css/normalize.css" />
 		<link rel="stylesheet" href="./css/style.css" />
 		<title>Wordpress Интенсив</title>
 	</head>
@@ -31,6 +32,7 @@
 				</div>
 
 				<a
+					class="button_link"
 					href="https://media.discordapp.net/attachments/319545870205059073/417766418533318657/BILLY.gif"
 					><button class="promo_btn">Записаться на интенсив!</button></a
 				>
@@ -199,6 +201,7 @@
 					свой приз по окончании обучения!
 				</div>
 				<a
+					class="button_link"
 					href="https://media.discordapp.net/attachments/319545870205059073/417766418533318657/BILLY.gif"
 					><button class="gift_btn">Записаться на интенсив!</button></a
 				>
